@startuml

namespace Fleemarket {
    class ProductController{
        +List<Product> list
        ---
        +getProduct() : Database.ProductContext
        +getRandomProduct() : Database.ProductContext
        +newProduct() : boolean
    }
    
    ProductController --o Product
    
    class Printer {
        print(value : string) : void
    }
    
    abstract Class Person {
        {abstract} action() : void
    }
    
    class Seller extends Person {
        +action() : void
        -newProduct() : Product
    }
    
    Seller --o ProductController
    Seller --- Printer : Uses
    
    class Customer extends Person {
        +action() : void
        -buyProduct() : Product
    }
    
    Customer --o ProductController
    Customer --- Printer : Uses
        
    class Product {
        name : string
        price : int
    }
    
    class PersonFactory {
        +CreateSellers(int numberOfSellers)
        +CreateCustomers(int numberOfSellers)
    }
    
    PersonFactory --- Seller : Creates
    PersonFactory --- Customer : Creates
}

@enduml
